--- a/webapp/admin/category_list.html
+++ b/webapp/admin/category_list.html
@@ -3,7 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>BC2商城</title>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link href="css/frame.css" rel="stylesheet" type="text/css"/>
+<link href="css/gz.css" rel="stylesheet" type="text/css" />
+<link href="css/frame.css" rel="stylesheet" type="text/css" />
+<link href="css/home.css" rel="stylesheet" type="text/css" />
 <script language="javascript">
 function show(table,sum){
 var t;
@@ -97,6 +99,41 @@ else
 			<li><a href="comment_list.html">评论管理</a></li>
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
+	</div>
+    <div id="left">
+		<div id="categoryFixed">
+			<h4><span>后台首页</span></h4>
+			<ul>
+				<li><a href="index.jsp">后台首页</a></li>
+			
+			</ul>
+			<h4><span>销售管理</span></h4>
+			<ul>
+				<li><a href="salesdata_admin.html">查询销售情况</a></li>
+				<li><a href="salesdata_list.html">销售量统计</a></li>
+			</ul>
+            <h4><span>目录管理</span></h4>
+			<ul>
+				<li><a href="category_list.html">编辑商品目录</a></li>
+                <li><a href="category_list.html">添加商品目录</a></li>             
+			</ul>
+			<h4><span>商品管理</span></h4>
+			<ul>
+                <li><a href="item_list.html">添加商品</a></li>
+                <li><a href="item_list.html">修改商品信息</a></li>
+				<li><a href="item_search.html">商品搜索</a></li>              
+			</ul>
+			<h4><span>订单管理</span></h4>
+			<ul>
+                <li><a href="order_list">订单审核</a></li>
+				<li><a href="order_admin.html">查询订单</a></li>
+			</ul>
+            	<h4><span>会员管理</span></h4>
+			<ul>
+                <li><a href="user_admin.html">查询会员</a></li>
+				<li><a href="user_admin.html">设置会员等级规定</a></li>
+			</ul>
+      </div>
 	</div>
 <!--	<div id="banner"></div>-->
     <div style="text-align:left; font-size:16px; background-color: #FFF""><span style="padding-right:20px;padding-left:2px;"><a href="category_list.html">[添加目录]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="category_list.html">[目录列表]</a></span></div>
@@ -278,8 +315,6 @@ else
 <input type="button" name="edit" value="编辑目录" onClick="checkselectno()"></td>
 				</tr>
             </table>
-			</div>
-			</div>
 			
 			
 			
@@ -332,7 +367,8 @@ else
         </table>
 		</form>		
 			</div>
-
+            </div>
+            </div>
 </div>
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
