some modifies on the css and the item_info.html

--- a/webapp/admin/item_info.html
+++ b/webapp/admin/item_info.html
@@ -1,8 +1,11 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<%@ page contentType="text/html; charset=utf-8"%>
+<%@ taglib prefix="s" uri="/struts-tags" %>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>BC2商城</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Symagic网上书城</title>
 <link href="css/frame.css" rel="stylesheet" type="text/css">
+<link href="css/gz.css" rel="stylesheet" type="text/css">
    </head>
 
 <body>
@@ -37,36 +40,49 @@
 			<div id="sendnotehead"><strong>商品信息</strong></div>
 			<div id="sendnotecontent">
 				<table id="creditquery">
+                <
 				<caption>
 				大学物理学.第四册：波动与光学（第2版）
 				</caption>
 				<tbody>
 				<tr>
           <td><img src="../image/dxwl4.jpg" alt="大学物理第四册" class="picture1"></td>
-          <td colspan="4" class="tdleftalign">本书是清华大学教材《大学物理学》的第四册，讲述振动与波的一般基本规律和波动光学的基本原理，包括光的干涉、衍射和偏振。除了基本内容外，还专题介绍了全息照相、光学信息处理、液晶等今日物理趣闻和着名物理学家托马斯·杨和菲涅耳的传略。基本内容扼要，附加内容通俗易懂。   本书可作为高等院校的大学物理教材，也可以作为中学物理教师教学或其他读者自学的参考书。</td>
+          <td colspan="4" class="tdleftalign">本书是清华大学教材《大学物理学》的第四册，讲述振动与波的一般基本规律和波动光学的基本原理，包括光的干涉、衍射和偏振。除了基本内容外，还专题介绍了全息照相、光学信息处理、液晶等。</td>
         </tr>
         <tr>
           <td>市场价：￥10.00</td>
-          <td>会员价：￥8.50</td>
-		  <td>节省：￥1.50</td>
+          <td>商城价：￥8.50</td>
+		  <td>折扣：0.85</td>
 		  <td>库存量：20</td>
-		  <td>用户评分：<img src="../image/4star.JPG" alt="喜欢" class="picture"></td>
         </tr>
+        <tr>
+        <td>作者：刘慈欣</td>
+        <td>出版社：重庆出版社</td>
+        <td>ISBN:9787229042066</td>
+        <td>出版时间：2012-01-01</td>
+        </tr>
+        <tr>
+        <td>版次：1</td>
+        <td>开本：32</td>
+        <td>装帧：平装</td>
+        <td>页数：725</td>
+        </tr>
+        
 		<tr style="display:none">
 		  <td></td>
           <td></td>
 		  <td></td>
 		  <td></td>
-		<td><a href="comment_list.html">【查看用户详细评论】</a>
 		</tr>
 				 </tbody>
             </table>	
 			</div>
 		</div>
 		<div id="sendnote">
-			<div id="sendnotehead"><strong>共有2条评论</strong></div>
+			<div id="sendnotehead"><strong>用户评论</strong></div>
 			<div id="sendnotecontent">
 				<table id="creditquery">
+                <s:
 					<tr>
 					<td class="commentr1color"> 会员：</td>
 					<td class="commentr1color"> zhangtong123@163.com</td>
@@ -78,20 +94,7 @@
 					<tr>
 					<td class="commentr2color">评论：</td>
 	     			<td colspan="4" class="commentr2color"><span class="red">很不错的一本书，通俗易懂，是大学物理教材中的经典之作。</span></td>
-                    <td><a href="" style="float:right;margin-right:10px;">删除</a></td>
-	 			   </tr>
-				   	<tr>
-					<td class="commentr1color"> 会员：</td>
-					<td class="commentr1color"> wangqd456@126.com</td>
-					<td class="commentr1color"> 发表时间：</td>
-					<td class="commentr1color"> 2007-10-20 17:23:16</td>
-					<td class="commentr1color"> 打分：</td>
-					<td class="commentr1color"> <img src="../image/4star.JPG" alt="喜欢"></td>
-					</tr>
-					<tr>
-					<td class="commentr2color">评论：</td>
-	     			<td colspan="4" class="commentr2color"><span class="red">看过了，确实不错。</span></td>
-                     <td><a href="" style="float:right;margin-right:10px;">删除</a></td>
+                    <td><a href="" >删除</a></td>
 	 			   </tr>
             </table>	
 			</div>
