图片地址测试通过

--- a/webapp/order.html
+++ b/webapp/order.html
@@ -48,7 +48,9 @@
 	</div>
     <div class="clear"></div>
     <div id="order_container">
-    	
+    	<div class="c-info">
+        	
+        </div>
     </div>
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
