item_info.jsp修改

--- a/webapp/item_info.html
+++ b/webapp/item_info.html
@@ -90,6 +90,7 @@
         <div id="spec-n1"><img src="upload/linux.jpg"/></div>
         <ul>
         <li><span>总评分：</span><span class="star"><span class="sa45"></span></span></li>
+        <li><span>书籍分类：</span>托尔斯泰</li>
         </ul>
         </div>
         <ul id="summary">
@@ -145,6 +146,7 @@
         </div>
         </div>
         </div>
+    </div>
       <div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
 		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
