修改item_edit，提交order_info 并清除some warnings

--- a/webapp/admin/price_edit.html
+++ b/webapp/admin/price_edit.html
@@ -45,7 +45,7 @@
 				   <tr>
 					<th width="180">商品名称：</th>
             		<td width="360">
-					 <input type="Text" class="inputttextlarge" name="name" onFocus="nextfield='name'" value="大学物理学.第四册：波动与光学（第2版）" maxlength="25" disabled="disabled"> </td>
+					 <input type=text class="inputttextlarge" name="name" onFocus="nextfield='name'" value="大学物理学.第四册：波动与光学（第2版）" maxlength="25" disabled="disabled"/> </td>
 					 
 					 <td width="142"><span class="red"></span></td>
           		 </tr>
@@ -72,6 +72,7 @@
 		</form>
 				
 			</div>
+		</div>
 		</div>
 		
 	<div id="footer">
