小接口修改

--- a/webapp/order.html
+++ b/webapp/order.html
@@ -103,7 +103,7 @@
         </div>
         <div id="ware">
         <h1>结算</h1>
-        <span id="pay">应付总额：</span>
+        <li id="pay">应付总额：</li>
         </div>
     </div>
 	<div id="footer">
