--- a/webapp/admin/user_admin.html
+++ b/webapp/admin/user_admin.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>BC2商城</title>
 <link href="css/frame.css" rel="stylesheet" type="text/css"/>
+<link href="css/gz.css" rel="stylesheet" type="text/css"/>
+<link href="css/home.css" rel="stylesheet" type="text/css"/>
 <script language="javascript" src="js/checkform.js">
 
 </script>
@@ -29,17 +31,50 @@
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
-     <div style="text-align:left; font-size:16px; background-color: #FFF""><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员级别设置]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员查询]</a></span></div>
-	<div id="main">
-		<div id="search2">
-			<div id="searchleft">
-				<img src="../image/ico_site.jpg"  id="ico_site"/>
-				网站路径：<a href=""> 会员管理</a>
+ 
+    <div id="left_user_admin">
+			<div id="categoryFixed">
+		
+				<h4>
+					<span>会员管理</span>
+				</h4>
+				<ul>
+					<li><a href="user_admin.html">查询会员</a></li>
+					<li><a href="user_admin.html">设置会员等级规定</a></li>
+				</ul>
 			</div>
 		</div>
-		<div id="double1">
-			<div id="doublehead1"><strong>会员级别设置</strong></div>
+
+<!--     <div style="text-align:left; font-size:16px; background-color: #FFF""><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员级别设置]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员查询]</a></span></div>-->
+	<div id="main">
+		  	<div id="search1">
+				<div id="mysearchleft">
+					<img src="image/ico_site.jpg" id="ico_site" /> 网站路径：
+                    <a href="index.jsp">会员管理</a>
+				</div>
+                <div id="searchright">
+					<form action="quick_search">
+						<select name="catalogID">
+							<option value="0">所有类别</option>
+							<s:iterator value="catalog" var='outer'>
+								<option value="<s:property value='#outer.ID'/>">
+									<s:property value='#outer.name' />
+								</option>
+								<s:iterator value="#outer.childCatalog" var="inner">
+									<option value="<s:property value='#inner.ID'/>">
+										&nbsp;&nbsp;&nbsp;
+										<s:property value='#inner.name' />
+									</option>
+								</s:iterator>
+							</s:iterator>
+						</select> <input type="text" name="keyword" id="keyword" class="gray"
+							value="" /> <input type="submit"
+							value="搜索" onclick=""/>
+					</form>
+				</div>
+                </div>
+		<div id="mydouble">
+			<div id="mydoublehead1"><strong>会员级别设置</strong></div>
 			<div id="doublecontent1">
 			<form action="" method="post" enctype="multipart/form-data" name="form1">
 				<table id="xialabiao">
@@ -106,7 +141,7 @@
               <td align="left" class="inputContent">
                 <input type="Text" class="inputtext" name="credit" onFocus="nextfield='credit'" maxlength="25">
               </td>
-              <td colspan="2" align="left" class="inputContent"><font color="#CC0000">当会员积分大于相应等级的积分下限时，会员将自动升级</font></td>
+              <td colspan="2" align="left" class="inputContent"><font color="#CC0000">当积分大于相应等级的积分下限时，会员将自动升级</font></td>
               <td align="center" class="inputContent">&nbsp;</td>
             </tr>
             <tr>
@@ -130,7 +165,7 @@
 			
 			
 			
-			<div id="double2">
+			<div id="mydouble">
 			<div id="doublehead2"><strong>会员查询</strong></div>
 			<div id="doublecontent2">
 				<table width="100%">
