收藏夹设计完成，购物车删除功能完成

--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -27,8 +27,8 @@
             		<td class="itemsearchtd1">
 						<input type="text" name="captchaValue" id="captchaValue" class="inputtext"/>
 					</td>
-					<td>
-					 <img  src="captcha_get_captcha" onclick="change_captcha(this)"/>	
+					<td id="captcha_td" >
+					 <img src="captcha_get_captcha" onclick="change_captcha(this)"/>	
 					</td>
           		 </tr>
 				 <tr >
