--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -76,8 +76,8 @@
             		<td class="itemsearchtd1">
 						<input type="text" name="captchaValue" class="inputtext" msg_num=""/>
 					</td>
-					<td>
-					 <img  src="captcha_get_captcha" />	
+					<td id="captcha_td" >
+					 <img onclick="change_captcha(this)"  src="captcha_get_captcha" />	
 					</td>
           		 </tr>
 				 <tr>
