--- a/webapp/order.html
+++ b/webapp/order.html
@@ -63,11 +63,13 @@
             	<table width="100%" cellspacing="0" border="0">
                 	<tbody>
                     	<tr><td width="80" valign="middle" align="right"><font color="red">*</font>收货人姓名：</td><td><input class="txt" type="text"/></td></tr>
-                        <tr><td valign="middle" align="right"><font color="red">*</font>省&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;份：</td><td><select><option value="">请选择</option></select><select><option value="">请选择</option></select><select><option value="">请选择</option></select></td></tr>
-                    	<tr><td valign="middle" align="right"><font color="red">*</font>地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：</td><td><span id="consign_address"></span><input type="text" class="txt"></td></td></tr>
+                        <tr>
+                          <td valign="middle" align="right"><font color="red">*</font>所在地区：</td><td><select><option value="">请选择</option></select><select><option value="">请选择</option></select><select><option value="">请选择</option></select></td></tr>
+                    	<tr>
+                    	  <td valign="middle" align="right"><font color="red">*</font>详细地址：</td><td><span id="consign_address"></span><input type="text" class="txt long"></td></td></tr>
                     	<tr><td valign="middle" align="right"><font color="red">*</font>手机号码：</td><td><input type="text" class="txt"/>或者&nbsp;&nbsp;或&nbsp;&nbsp;固定电话：<input type="text" class="txt"></td></tr>
                     	<tr><td valign="middle" align="right">邮箱地址：</td><td>43234@qq.com</td></tr>
-                    	<tr><td valign="middle" align="right"><font color="red">*</font>邮政编码：</td><td><input type="text" class="txt"/></td></tr>
+                    	<tr><td valign="middle" align="right"><font color="red">*</font>邮政编码：</td><td><input type="text" class="txt short"/></td></tr>
                     </tbody>
                 </table>
                 <span class="add-to-address">添加信息至地址簿</span><span>重置内容</span>
@@ -103,8 +105,11 @@
         </div>
         <div id="ware">
         <h1>结算</h1>
-        <li id="pay">应付总额：</li>
-        </div>
+        <div class="total_price"><span id="pay">应付总额：<strong>￥200.00</strong>元</span></div>
+        <div class="clear"></div>
+        <div class="order_confirm"></div>
+        <div class="clear"></div>
+        </div>     
     </div>
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
