--- a/webapp/user.html
+++ b/webapp/user.html
@@ -7,7 +7,7 @@
 <link href="css/user.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/yf_ADS.js"></script>
-
+<script type="text/javascript" src="js/user.js"></script>
 </head>
 
 <body>
@@ -73,76 +73,107 @@
 		</div>
         </div>
         <div class="user_left">
-        <dl>
-        <dt>我的商城</dt>
-        <div onclick="show_user_con('1')"><dd>浏览信息</dd></div>
-        <div onclick=""><dd>我的收藏</dd></div>
-        <div onclick="show_user_con('2')"><dd>修改密码</dd></div>
-        <div onclick="show_user_con('3')"><dd>修改昵称</dd></div>
-        <div onclick="show_user_con('4')"><dd>积分查询</dd></div>
-        <br/>
-        <dt></dt>
-        </dl>
+        	<dl>
+        		<dt>我的商城</dt>
+        		<div onclick="show_user_con('1')"><dd>浏览信息</dd></div>
+        		<div onclick=""><dd>我的收藏</dd></div>
+        		<div onclick=""><dd>收货地址</dd></div>
+        		<div onclick="show_user_con('2')"><dd>修改密码</dd></div>
+        		<div onclick="show_user_con('3')"><dd>修改昵称</dd></div>
+        		<div onclick="show_user_con('4')"><dd>积分查询</dd></div>
+        		<br/>
+        		<dt></dt>
+        	</dl>
         </div>
         <div id="favorite" class="user_note">
-        <div class="head">我的收藏商品</div>
-        <div id="loading"></div>
-        <div id="favorite-container">
-        	<div id="favorite-content">
-        		<div id="favorite-content-head">
-                	<div class="column checkbox">
-                		<input class="" type="checkbox"/>
-                	</div>
-                    <div class="column p-name">商品信息</div>
-                    <div class="column p-price">商城价</div>
-                    <div class="column inventory">库存</div>
-                    <div class="column action">操作</div>
-            	</div>
-                <div id="favorite-content-body">
-                	<div class="cell checkbox">
-                		<input class="" type="checkbox"/>
-                	</div>
-                    <div class="cell p-name"><div class="p-name-img"><a href=""><img src="upload/9787214078476.png"/></a></div><div class="p-name-n"><a href="">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</a>
-                    <br>综合评分：<span class="sa45"></span></div></div>
-                   <div class="cell p-price">商城价</div>
-                    <div class="cell inventory">库存</div>
-                    <div class="cell action"><span class="fav-add"></span>
-                    <a href="" class="fav_cancel">取消收藏</a></div>
-            	</div>
-                <div id="favorite-content-bottom">
-                	<input type="checkbox" />全选&nbsp;&nbsp;
-                	<span class="fav-add-b"></span>
-                    <a href="">取消收藏</a>
+        	<div class="head">我的收藏商品</div>
+        	<div id="loading"></div>
+        	<div id="favorite-container">
+        	</div>
+        </div>
+        <div id="address" class="user_note">
+        	<div class="head">我的收货地址</div>
+        	<div id="loading"></div>
+        	<div id="address-container">
+            	<div id="address-content">
+                <!--修改地址迭代开始-->
+                <div id="test" class="address-edit">
+                <h2>修改地址<span class="close" onclick="close_address(this)"></span></h2>
+                <table width="100%" cellspacing="0" border="0">
+                			<tbody>
+                    		<tr><td width="80" valign="middle" align="right"><font color="red">*</font>收货人姓名：</td><td><input class="txt" type="text"/></td></tr>
+                        	<tr>
+                        	  <td valign="middle" align="right"><font color="red">*</font>所在地区：</td><td><select><option value="">请选择</option></select><select><option value="">请选择</option></select><select><option value="">请选择</option></select></td></tr>
+                    		<tr>
+                    		  <td valign="middle" align="right"><font color="red">*</font>详细地址：</td><td><span id="consign_address"></span><input type="text" class="txt long"></td></td></tr>
+                    		<tr><td valign="middle" align="right"><font color="red">*</font>手机号码：</td><td><input type="text" class="txt"/>或者&nbsp;&nbsp;或&nbsp;&nbsp;固定电话：<input type="text" class="txt"></td></tr>
+                    		<tr><td valign="middle" align="right">邮箱地址：</td><td>43234@qq.com</td></tr>
+                    		<tr><td valign="middle" align="right"><font color="red">*</font>邮政编码：</td><td><input type="text" class="txt short"/></td></tr>
+                    		</tbody>
+                		</table>
+                  </div>
+                  <!--修改地址迭代结束-->
+                	<div id="address-content-head">
+                    <h2>新增收货地址</h2>
+                    </div>
+                    <div id="address-content-body">
+                    	<table width="100%" cellspacing="0" border="0">
+                			<tbody>
+                    		<tr><td width="80" valign="middle" align="right"><font color="red">*</font>收货人姓名：</td><td><input class="txt" type="text"/></td></tr>
+                        	<tr>
+                        	  <td valign="middle" align="right"><font color="red">*</font>所在地区：</td><td><select><option value="">请选择</option></select><select><option value="">请选择</option></select><select><option value="">请选择</option></select></td></tr>
+                    		<tr>
+                    		  <td valign="middle" align="right"><font color="red">*</font>详细地址：</td><td><span id="consign_address"></span><input type="text" class="txt long"></td></td></tr>
+                    		<tr><td valign="middle" align="right"><font color="red">*</font>手机号码：</td><td><input type="text" class="txt"/>或者&nbsp;&nbsp;或&nbsp;&nbsp;固定电话：<input type="text" class="txt"></td></tr>
+                    		<tr><td valign="middle" align="right">邮箱地址：</td><td>43234@qq.com</td></tr>
+                    		<tr><td valign="middle" align="right"><font color="red">*</font>邮政编码：</td><td><input type="text" class="txt short"/></td></tr>
+                    		</tbody>
+                		</table>
+                    </div>
+                    <div id="address-bottom">
+                    <h2>已保存地址</h2>
+                    <div class="address-table">
+                    	<table width="100%" >
+                        	<tbody>
+                             <tr class="tr"><td width="11%">收货人</td><td width="25%">所在地区</td><td width="30%" >详细地址</td><td width="8%">邮编</td><td width="13%">手机/电话</td><td width="13%">操作</td></tr>
+                			<!--地址迭代-->
+                    		<tr ><td>四字测试</td><td>广东省 深圳市 南山区</td><td class="detail">南山区南油路海辉大厦金波阁25B常常隧道发生的过再长一点儿在场一点儿</td><td>510006</td><td class="detail">13599999999<br/>2332623636</td><td><a href="" id="t1" onclick="">修改</a>&nbsp;|&nbsp;<a href="">删除</a></td></tr>
+                    		<!--地址迭代结束-->
+                            </tbody>
+                        </table>
+                    </div>
+                    
+                    
+                    </div>
                 </div>
         	</div>
         </div>
-        </div>
         <div id="1" class="user_note">
-        <div class="head">浏览信息</div>
-        <div class="user_note_content">
-        	<p><span>用户名：</span>test@test.com</p>
-            <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
-            <p><span>现有积分：</span>300</p>
-        </div>
+        	<div class="head">浏览信息</div>
+        	<div class="user_note_content">
+        		<p><span>用户名：</span>test@test.com</p>
+            	<p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
+            	<p><span>现有积分：</span>300</p>
+        	</div>
         </div>
         <div id="2" class="user_note hide">
-        <div class="head">修改密码</div>
-        <div class="user_note_content">
-        <form>
-        	<p><span>原密码：</span><input class="inputtext"/></p>
-            <p><span>新密码：</span><input class="inputtext"/></p>
-            <p><span>密码确认：</span><input class="inputtext"/></p>
-            <p><span><input type="submit" value="确定修改"/></span></p>
-    	</form>
-        </div>
+        	<div class="head">修改密码</div>
+        	<div class="user_note_content">
+        		<form>
+        			<p><span>原密码：</span><input class="inputtext"/></p>
+            		<p><span>新密码：</span><input class="inputtext"/></p>
+            		<p><span>密码确认：</span><input class="inputtext"/></p>
+            		<p><span><input type="submit" value="确定修改"/></span></p>
+    			</form>
+        	</div>
         </div>
         <div id="3" class="user_note hide">
-        <div class="head">个人信息</div>
-        <div class="user_note_content">
-            <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
-            <p><span>修改昵称：</span><input class="inputtext"/></p>
-             <p><span><input type="submit" value="确定修改"/></span></p>
-        </div>
+        	<div class="head">个人信息</div>
+        	<div class="user_note_content">
+            	<p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
+            	<p><span>修改昵称：</span><input class="inputtext"/></p>
+            	<p><span><input type="submit" value="确定修改"/></span></p>
+        	</div>
         </div>
         <div id="4" class="user_note hide">
         <div class="head">积分详情</div>
