下单逻辑部分完成

--- a/webapp/cart.html
+++ b/webapp/cart.html
@@ -66,7 +66,7 @@
 		  </div>
 		</div>
         <div class="clear"></div>
-        <form>
+        <form id="checkout" action="order" method="post">
         <div id="cart-a">
         	<h2>我的购物车</h2>
         	<div id="cart_table">
