下单成功，忘记密码，登录大街口界面设计完成，item相关页面完善

--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -28,7 +28,7 @@
 						<input type="text" name="captchaValue" id="captchaValue" class="inputtext"/>
 					</td>
 					<td id="captcha_td" >
-					 <img src="captcha_get_captcha" onclick="change_captcha(this)"/>	
+					 <img id="cap" src="captcha_get_captcha" onclick="change_captcha(this)"/>	
 					</td>
           		 </tr>
 				 <tr >
