--- a/webapp/login.html
+++ b/webapp/login.html
@@ -100,7 +100,7 @@
 		</form>		
 			</div>
 		</div>
-		
+	</div>	
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
 		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
